fix(style): remove whitespace on the left

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .banner-container {
   background-color: rgb(0,89,83);
   position: absolute;
-  left: 40px;
   width:168px;
   height: 100%;
 }
@@ -25,14 +24,32 @@
 .top-divider {
   background-color: rgb(0,89,83);
   position: absolute;
-  left: 40px;
+  left: 0;
   top: 0;
-  width:calc(100vw - 40px);
+  width:100vw;
   height:5px;
 }
 
 .archive-mobile {
   display: none;
+}
+
+@media (max-height: 700px) {
+  .banner-container .logo {
+    font-family:'IrisUPC', sans-serif;
+    font-size: 62px;
+    width: 0;
+    min-width: 0;
+    transform: rotate(-90deg) translateX(-100vh) translateX(340px) translateY(75px);
+    line-height: 40px;
+    transform-origin: left top 0;
+  }
+}
+
+@media (max-height: 550px) {
+  .banner-container .logo {
+    display: none;
+  }
 }
 
 @media (max-width: 750px) {
