--- a/src/content/Content.css
+++ b/src/content/Content.css
@@ -1,6 +1,6 @@
 .main-content {
   position: absolute;
-  left: 444px;
+  left: 404px;
   top: 5px;
   height: calc(100vh - 5px);
   right: 0;
