--- a/src/contentSelection/ContentSelection.css
+++ b/src/contentSelection/ContentSelection.css
@@ -1,5 +1,5 @@
 .year-selection {
-  margin-left: 207px !important;
+  margin-left: 167px !important;
   margin-top: 5px !important;
   width: 238px !important;
   height: calc(100vh - 5px) !important;
